maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:15: error: ';' expected but 'if' found.
     } if (!isWallAtLeft()) {
       ^